styles/style.css
/* Common Shared Styles */
body {
    font-family: 'Lato', 'sans-serif';
    font-family: 'Open Sans', sans-serif;
}

.text-primary {
    color: #FD6E0A;
}

.btn-primary {
    border-radius: 5px;
    background: #FD6E0A;
    border: 0;
    color: white;
    width: 130px;
    height: 40px;
    font-size: 16px;
    font-weight: 400;
    padding: 5px;
}

.section-title {
    color: #181818;
    text-align: center;
    font-size: 30px;
    font-weight: 700;
}

/* Navigation bar styling */
nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 200px;
}

.nav-title {
    color: var(--Dark-01, #181818);
    font-size: 45px;
    font-weight: 800;
}

nav>ul {
    display: flex;
    align-items: center;
}

nav li {
    margin-right: 50px;
    list-style: none;
}

nav li a {
    text-decoration: none;
    color: #474747;
}

/* Header section style */
.header {
    background-color: #FFF8F3;
}

.header-bg {
    background-image: url('../images/header_bg.png'), url('../images/developer.png'); 
    background-repeat: no-repeat;
    background-position: bottom right, top left;
    background-size: 400px,83px;
}
/* Banner Style */
.banner {
    padding: 30px 30px 0px 150px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.banner-content {
    max-width: 500px;
}

.profile-pic {
    /* width: 584px;*/
    /* height: 500px;  */
    /* margin-left: 00px; */
    /* position: absolute;*/
    /* top: 30%;  */
    /* left: 90%; */
    /* transform: translate(-50%, -50%); */
}

.banner-greetings {
    color: var(--Dark-02, #474747);
    font-size: 30px;
    font-weight: 600;
    margin-bottom: 0px;
}

.banner-title {
    color: var(--Dark-01, #181818);
    font-size: 45px;
    font-weight: 700;
    margin-top: 5px;
}

.banner-description {
    color: var(--Dark-03, #757575);
    font-size: 14px;
    font-weight: 400;
}
.banner-btn{
    display: flex;
    gap: 15px;
}
/* Main section Style */
main {
    max-width: 1140px;
    margin: 0 auto;
}
.about-info-container {
    display: flex;
    justify-content: space-between;
}

.info-title {
    color: #757575;
    text-align: center;
    font-size: 16px;
    font-weight: 400;
    margin-top: 30px;
}

.info-description {
    color: #474747;
    font-size: 18px;
    font-weight: 600;
    line-height: 30px;
    margin-top: -10px;
}

/* About section style */
.about-me {
    border-radius: 10px;
    background: #FFF8F3;
    margin: 100px 0;
    padding: 130px;
}

.section-description {
    color: #757575;
    text-align: center;
    font-size: 14px;
    font-weight: 400;
}

#what-i-do-description {
    padding: 10px 150px;
}

/* Skill Section */
.skill-container {
    display: flex;
    gap: 24px;
}

.skill {
    padding: 30px;
    border-radius: 5px;
    background: #FFF;
    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
}

.skill-title {
    color: #181818;
    text-align: left;
    font-size: 16px;
    font-weight: 700;
}

.skill-description {
    color: #757575;
    font-size: 12px;
    font-weight: 400;
    /* padding: 0px; */
}

/* Resume Section Style */
.resume-column-title {
    color: #474747;
    font-size: 22px;
    font-weight: 700;
    margin-bottom: 10px;
}

.resume-container {
    display: flex;
    gap: 30px;
}

.resume-item-title {
    color: #474747;
    font-size: 20px;
    font-weight: 700;
}

.resume-item-institute {
    color: #757575;
    font-size: 18px;
    font-weight: 600;
}

.resume-item-description {
    color: #757575;
    font-size: 14px;
    font-weight: 400;
}

.download-cv {
    text-align: center;
    margin-top: 30px;
}

/* Footer Section Style */
footer {
    background-color: #FFF8F3;
}

.footer-container {
    display: flex;
    gap: 150px;
    margin: 100px 200px;
}

.footer-column {
    width: 50%;
}

.footer-column-title {
    color: #181818;
    font-size: 20px;
    font-weight: 700;
}

.footer-column-description {
    color: #474747;
    font-size: 14px;
    font-weight: 400;
    margin-top: -5px;
}

.footer-column-form {}

.footer-column-form-text {
    display: block;
    margin-top: 20px;
    color: #757575;
    font-size: 12px;
    font-weight: 400;
    border-radius: 5px;
    background: #FFF;
    border: none;
    width: 100%;
    /* height: 40px; */
    padding: 15px 20px;
}

#footer-textarea {
    margin-top: 20px;
    color: #757575;
    font-size: 14px;
    font-weight: 400;
    border-radius: 5px;
    background:  #FFF;
    border: none;
    width: 100%;
    padding: 15px 20px;

}

.footer-column-form-submit {
    display: block;
    margin-top: 15px;
    margin-bottom: 5px;
}
.social-links a{
    margin-left: 25px;
}

